# watch-rs

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
.github/: CONTRIBUTING.md
.github/workflows/: cross-compile.yml
src/: cli.rs  config.rs  diff.rs  display.rs  main.rs  runner.rs  watch.rs
