[package]
name = "watch-rs"
version = "1.0.3"
edition = "2024"
authors = ["watch-rs contributors"]
description = "A cross-platform Rust implementation of the Unix watch command"
license = "MIT"
repository = "https://github.com/Raina-Hardik/watch-rs"
readme = "README.md"
keywords = ["watch", "cli", "terminal", "utility", "cross-platform"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.6.0", features = ["derive", "env"] }
crossterm = "0.29.0"
chrono = "0.4.44"
anyhow = "1.0.102"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
# Aggressively optimize for both speed and size
